# llavacap

./: README.md  pyproject.toml
notebooks/: pipeline-example.ipynb
scripts/: image_captioning.py
src/: main.py
